Check du token à la redirection

--- a/BlazorApp2/wwwroot/appsettings.json
+++ b/BlazorApp2/wwwroot/appsettings.json
@@ -7,5 +7,10 @@
       "ResponseType": "id_token",
       "Scope": "openid profile email" // Ajoutez les scopes nécessaires
     }
-  }
+  },
+  "ApiSettings": {
+    "AccessApiUrl": "https://localhost:59570/api/"
+  },
+
+  "Version": "1.0"
 }
